--- a/podcastsPage.html
+++ b/podcastsPage.html
@@ -324,19 +324,23 @@
         }
     }
 
-    @media (max-width: 300px) {
+    @media (max-width: 200px) {
         .programs-grid {
             /* grid-template-columns: 1fr !important; ניסיון בלי*/
             grid-template-columns: repeat(2, 1fr);
             gap: 20px;
             padding: 10px;
+            aspect-ratio: 1 / 1;   /* ריבוע אחיד */
+              min-width: 48px;
+
+
         }
         .program-card img {
-        width: 100%;
-        object-fit: cover;
-        border-radius: 12px;
-        display: block;
-        margin: 0 auto;
+        aspect-ratio: 1 / 1;
+    width: 100%;
+    object-fit: cover;
+    display: block;
+    height: auto !important;
 
     }}
 
